[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Justin Thomas <justin@jdt.io>"]
rust-version = "1.75"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-serial = "5"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
time = { version = "0.3", features = ["local-offset"] }
