[package]
name = "drivewire-transport"
version = "0.0.0"
description = "Serial and TCP transports for drivewire-rs"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
libc = "0.2"
